countries of interest script added

--- a/Data_cleaning/cleaning.ipynb
+++ b/Data_cleaning/cleaning.ipynb
@@ -1124,6 +1124,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ordered_mimi_data = pd.read_csv('ordered_mimi.csv', low_memory=False)\n",
+    "countries_of_interest = ['AF', 'LB', 'LY', 'IQ', 'SY', 'YE', 'SD', 'SS', 'SO', 'UA', 'COD','CD', 'LK', 'BA', 'CI', 'LK', 'BA',\n",
+    "    'XK', 'RU-CE', 'CO', 'GB-NIR', 'MM', 'SL', 'LR', 'ER', 'ET', 'TD', 'BI', 'AO', 'MZ']\n",
+    "filtered_df = ordered_mimi_data[ordered_mimi_data['origin_country'].isin(countries_of_interest)]\n",
+    "countries_of_interest_df = pd.DataFrame(filtered_df)\n",
+    "countries_of_interest_df.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file_path = 'countries_of_interest_data.csv'\n",
+    "countries_of_interest_df.to_csv(output_file_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
