fixed column datatype error

--- a/Data_Analysis/first_iteration/First_Analysis.ipynb
+++ b/Data_Analysis/first_iteration/First_Analysis.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_14332\\3381712881.py:5: DtypeWarning: Columns (148,150,152,154,156,158,159,160) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  countries_of_interest_df = pd.read_csv(\"countries_of_interest_data.csv\")\n"
+      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_41848\\444942925.py:5: DtypeWarning: Columns (148,150,151,152,154,156,157,158) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  countries_of_interest_df = pd.read_csv(\"merged_Dataset.csv\")\n"
      ]
     }
    ],
@@ -19,7 +19,7 @@
     "import seaborn as sns\n",
     "%matplotlib inline\n",
     "import pandas as pd \n",
-    "countries_of_interest_df = pd.read_csv(\"countries_of_interest_data.csv\")"
+    "countries_of_interest_df = pd.read_csv(\"merged_Dataset.csv\")"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
