--- a/Data_cleaning/Second_iteration/Gdp/gdpData.ipynb
+++ b/Data_cleaning/Second_iteration/Gdp/gdpData.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd    \n"
+    "import pandas as pd    \n",
+    "from pandas.api.types import is_string_dtype\n",
+    "from pandas.api.types import is_numeric_dtype\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +404,7 @@
        "24                   ..  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +627,7 @@
        "[193 rows x 7 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1090,7 @@
        "[2504 rows x 336 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1521,7 @@
        "[2504 rows x 342 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,16 +1535,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Removing '..' values from the data type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GDP_merged.replace(to_replace = '..', value = '', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Changes the Datatype of the merged columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GDP_merged[['destination_gdp_2014', 'destination_gdp_2015','destination_gdp_2016','destination_gdp_2017','destination_gdp_2018','destination_gdp_2019', 'origin_gdp_2014', 'origin_gdp_2015', 'origin_gdp_2016','origin_gdp_2017','origin_gdp_2018','origin_gdp_2019']] = GDP_merged[['destination_gdp_2014', 'destination_gdp_2015','destination_gdp_2016','destination_gdp_2017','destination_gdp_2018','destination_gdp_2019', 'origin_gdp_2014', 'origin_gdp_2015', 'origin_gdp_2016','origin_gdp_2017','origin_gdp_2018','origin_gdp_2019']].apply(pd.to_numeric)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Creating new data set file in a \"New\" folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GDP_merged.to_csv(\"New/merged_Dataset.csv\")"
+    "GDP_merged.to_csv(\"New/merged_Dataset.csv\", index=False)"
    ]
   }
  ],
