Geographical Map for Analysis

--- a/Data_cleaning/Second_iteration/Gdp/gdpData.ipynb
+++ b/Data_cleaning/Second_iteration/Gdp/gdpData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "24                   ..  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "[193 rows x 7 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
        "[2504 rows x 336 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
        "[2504 rows x 342 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,15 +1551,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Changes the Datatype of the merged columns"
+    "Changes the Datatype of the merged columns and dropping ''Unnamed: 0' column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "GDP_merged.drop(['Unnamed: 0'],axis=1, inplace=True)\n",
     "GDP_merged[['destination_gdp_2014', 'destination_gdp_2015','destination_gdp_2016','destination_gdp_2017','destination_gdp_2018','destination_gdp_2019', 'origin_gdp_2014', 'origin_gdp_2015', 'origin_gdp_2016','origin_gdp_2017','origin_gdp_2018','origin_gdp_2019']] = GDP_merged[['destination_gdp_2014', 'destination_gdp_2015','destination_gdp_2016','destination_gdp_2017','destination_gdp_2018','destination_gdp_2019', 'origin_gdp_2014', 'origin_gdp_2015', 'origin_gdp_2016','origin_gdp_2017','origin_gdp_2018','origin_gdp_2019']].apply(pd.to_numeric)\n"
    ]
   },
@@ -1572,11 +1573,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GDP_merged.to_csv(\"New/merged_Dataset.csv\", index=False)"
+    "GDP_merged.to_csv(\"New/merged_Dataset.csv\", index=False)\n"
    ]
   }
  ],
