read from original generated CSV file
Maintaining copies of data files in your repository is a risk. It's easy to update the original and forget to copy it everywhere else.

Better to read directly from the original generated CSV file.

--- a/Data_cleaning/Second_iteration/Gdp/gdpData.ipynb
+++ b/Data_cleaning/Second_iteration/Gdp/gdpData.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "gdp_countries = pd.read_excel(\"Old/original_P_Data_Extract_From_World_Development_Indicators.xlsx\")\n",
-    "countries_of_interest = pd.read_csv(\"countries_of_interest_data.csv\", low_memory=False)\n",
+    "countries_of_interest = pd.read_csv(\"../../First_iteration/countries_of_interest_data.csv\", low_memory=False)\n",
     "gdp_columns = ['Country Code', '2014 [YR2014]', '2015 [YR2015]', '2016 [YR2016]','2017 [YR2017]','2018 [YR2018]','2019 [YR2019]'] \n",
     "\n",
     "gdp_c= gdp_countries['Country Code'].unique().tolist()"
