use original generated CSV file

--- a/Data_Analysis/first_iteration/First_Analysis.ipynb
+++ b/Data_Analysis/first_iteration/First_Analysis.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_41848\\444942925.py:5: DtypeWarning: Columns (148,150,151,152,154,156,157,158) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  countries_of_interest_df = pd.read_csv(\"merged_Dataset.csv\")\n"
+      "  countries_of_interest_df = pd.read_csv(\"../../Data_cleaning/Second_iteration/Gdp/New/merged_Dataset.csv\")\n"
      ]
     }
    ],
@@ -19,7 +19,7 @@
     "import seaborn as sns\n",
     "%matplotlib inline\n",
     "import pandas as pd \n",
-    "countries_of_interest_df = pd.read_csv(\"merged_Dataset.csv\")"
+    "countries_of_interest_df = pd.read_csv(\"../../Data_cleaning/Second_iteration/Gdp/New/merged_Dataset.csv\")"
    ]
   },
   {
