Added nagins research work in this branch as negins branch was causing conflicts

--- a/Data_Analysis/first_iteration/First_Analysis.ipynb
+++ b/Data_Analysis/first_iteration/First_Analysis.ipynb
@@ -228,6 +228,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```markdown\n",
+    "Additionally, upon scrutinizing the graph, we observed that certain countries experienced a higher number of migrations in specific years. Further research into the reasons behind this phenomenon for each country reveals valuable data.\n",
+    "\n",
+    "1. Afghanistan 2015: Increased migration due to persistent security concerns and ongoing conflicts [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "2. Angola 2019: Escalating political instability and economic challenges fueled higher migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "3. Bosnia and Herzegovina 2019: Rising migration attributed to regional tensions and economic factors [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "4. Burundi 2019: Heightened migration likely linked to political instability and social unrest [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "5. Chechnya (part of the conflict in Russia): Ongoing regional conflicts driving migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "6. Colombia 2019: Migration surge influenced by political and economic challenges [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "7. Democratic Republic of Congo 2019: Political instability and conflict prompted increased migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "8. Eritrea 2015: Migration upsurge amid political repression and limited economic opportunities [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "9. Ethiopia (various conflicts, including the Ethiopian Civil War) 2016: Escalating conflicts and civil unrest contributing to migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "10. Iraq 2015: Increased migration due to conflicts, security concerns, and economic challenges [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "11. Ivory Coast (Côte d'Ivoire) 2017: Economic factors and political stability influencing migration patterns [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "12. Kosovo 2019: Migration rise linked to economic hardships and political tensions [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "13. Lebanon 2016, 2017, 2018: Ongoing regional conflicts and economic instability driving migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "14. Liberia 2017, 2018: Economic difficulties and recovery from past conflicts impacting migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "15. Libya 2015: Escalating political instability and security concerns contributing to migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "16. Mozambique 2019, 2014: Regional conflicts and economic challenges driving migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "17. Myanmar 2017, 2018, 2019: Rohingya crisis and ethnic conflicts leading to increased migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "18. Northern Ireland (The Troubles, though largely resolved by 2011): Lingering effects of past conflicts contributing to migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "19. Sierra Leone 2017: Economic factors and recovery from past conflicts impacting migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "20. Somalia 2014, 2015: Ongoing conflicts, political instability, and economic challenges fueling migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "21. South Sudan 2019: Political instability, conflicts, and economic difficulties leading to migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "22. Sri Lanka 2014, 2015: Post-war recovery and economic opportunities influencing migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "23. Sudan 2015, 2016: Ongoing conflicts, economic challenges, and political instability driving migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "24. Syria 2016: Escalating conflicts and humanitarian crisis contributing to migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "25. Ukraine (conflict escalated in 2014) 2019: Ongoing conflict and political tensions leading to migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "26. Yemen 2019: Prolonged conflicts and humanitarian crisis driving migration [[6](https://www.elibrary.imf.org/view/book/9781513539744/ch04.xml)].\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Seperated DataFrame which shows total number of emigrants from the origin countries who left their countries to seek residence in 6 years(2014-2019)"
    ]
   },
@@ -2648,23 +2684,7 @@
     "fig,ax = plt.subplots(5,5, figsize=(35,35))\n",
     "\n",
     "\n",
-    "# for i in range(0,5):\n",
-    "#     for j in range(0,5):\n",
-    "#         x=[]\n",
-    "#         y=[]\n",
-    "        \n",
-    "#         if country_names[i][j] not in empty:\n",
-    "#             for E in X:\n",
-    "#                 x.append(group_cit_gdp[group_cit_gdp['origin_name']==country_names[i][j]][E].item())\n",
-    "#             for G in Y:\n",
-    "#                 y.append(group_cit_gdp[group_cit_gdp['origin_name']==country_names[i][j]][G].item())\n",
-    "#             ax[i][j].plot(x,y, label=f\"{country_names[i][j]}\")\n",
-    "#             ax[i][j].set_xlabel(\"Number of emmigrats\")\n",
-    "#             ax[i][j].set_ylabel(\"GDP of origin country\")\n",
-    "    \n",
-    "#             ax[i][j].legend()\n",
-    "        \n",
-    "# plt.title(\"Relationship between origin countries GDP and Number of emmigrants\")\n",
+    "\n",
     "x=['2014','2015','2016','2017','2018','2019']\n",
     "for i in range(0,5):\n",
     "    for j in range(0,5):\n",
