replaced path literal with os-generated path, ran script to generate data set

--- a/Data_cleaning/Second_iteration/Gdp/gdpData.ipynb
+++ b/Data_cleaning/Second_iteration/Gdp/gdpData.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "\n",
     "import pandas as pd    \n",
     "from pandas.api.types import is_string_dtype\n",
     "from pandas.api.types import is_numeric_dtype\n"
@@ -13,12 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdp_countries = pd.read_excel(\"Old/original_P_Data_Extract_From_World_Development_Indicators.xlsx\")\n",
-    "countries_of_interest = pd.read_csv(\"../../First_iteration/countries_of_interest_data.csv\", low_memory=False)\n",
+    "gdp_countries = pd.read_excel(os.path.join(\"Old\", \"original_P_Data_Extract_From_World_Development_Indicators.xlsx\"))\n",
+    "countries_of_interest = pd.read_csv(os.path.join(\"..\", \"..\", \"First_iteration\", \"countries_of_interest_data.csv\"), low_memory=False)\n",
     "gdp_columns = ['Country Code', '2014 [YR2014]', '2015 [YR2015]', '2016 [YR2016]','2017 [YR2017]','2018 [YR2018]','2019 [YR2019]'] \n",
     "\n",
     "gdp_c= gdp_countries['Country Code'].unique().tolist()"
@@ -33,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +415,7 @@
        "24                   ..  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +638,7 @@
        "[193 rows x 7 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1101,7 @@
        "[2504 rows x 336 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1532,7 @@
        "[2504 rows x 342 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1540,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,15 +1562,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Changes the Datatype of the merged columns"
+    "Changes the Datatype of the merged columns and dropping ''Unnamed: 0' column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "GDP_merged.drop(['Unnamed: 0'],axis=1, inplace=True)\n",
     "GDP_merged[['destination_gdp_2014', 'destination_gdp_2015','destination_gdp_2016','destination_gdp_2017','destination_gdp_2018','destination_gdp_2019', 'origin_gdp_2014', 'origin_gdp_2015', 'origin_gdp_2016','origin_gdp_2017','origin_gdp_2018','origin_gdp_2019']] = GDP_merged[['destination_gdp_2014', 'destination_gdp_2015','destination_gdp_2016','destination_gdp_2017','destination_gdp_2018','destination_gdp_2019', 'origin_gdp_2014', 'origin_gdp_2015', 'origin_gdp_2016','origin_gdp_2017','origin_gdp_2018','origin_gdp_2019']].apply(pd.to_numeric)\n"
    ]
   },
@@ -1572,12 +1584,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GDP_merged.to_csv(\"New/merged_Dataset.csv\", index=False)"
+    "GDP_merged.to_csv(\"New/merged_Dataset.csv\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1596,7 +1615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
