Table for favourite destination and a typo correction

--- a/Data_Analysis/first_iteration/First_Analysis.ipynb
+++ b/Data_Analysis/first_iteration/First_Analysis.ipynb
@@ -1573,7 +1573,7 @@
    ],
    "source": [
     "citizen_perpose = countries_of_interest_df\n",
-    "citizen_perpose['citizen_sum_5_years'] = citizen_perpose['ESTAT_2014_F_T_cit'] + citizen_perpose['ESTAT_2015_F_T_cit'] + citizen_perpose['ESTAT_2016_F_T_cit'] + citizen_perpose['ESTAT_2017_F_T_cit']+citizen_perpose['ESTAT_2018_F_T_res']+citizen_perpose['ESTAT_2019_F_T_cit']\n",
+    "citizen_perpose['citizen_sum_6_years'] = citizen_perpose['ESTAT_2014_F_T_cit'] + citizen_perpose['ESTAT_2015_F_T_cit'] + citizen_perpose['ESTAT_2016_F_T_cit'] + citizen_perpose['ESTAT_2017_F_T_cit']+citizen_perpose['ESTAT_2018_F_T_res']+citizen_perpose['ESTAT_2019_F_T_cit']\n",
     "\n",
     "group_citizen = citizen_perpose.groupby(['origin_name', 'origin_alpha_3'])\n",
     "group_citizen = group_citizen.agg({'citizen_sum_5_years': np.sum})\n",
@@ -2828,6 +2828,302 @@
     "\n",
     "            "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Favourite destination countries of migrants from conflicted countries "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>origin_name</th>\n",
+       "      <th>destination_name</th>\n",
+       "      <th>Total_6_years</th>\n",
+       "      <th>geodesic_distance_km</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Austria</td>\n",
+       "      <td>67306.0</td>\n",
+       "      <td>4636.538275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>3020.0</td>\n",
+       "      <td>6958.978978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>Bosnia and Herzegovina</td>\n",
+       "      <td>Slovenia</td>\n",
+       "      <td>91670.0</td>\n",
+       "      <td>326.198961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227</th>\n",
+       "      <td>Burundi</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>5982.0</td>\n",
+       "      <td>6446.514154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1656</th>\n",
+       "      <td>Chad</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>537.0</td>\n",
+       "      <td>2987.462572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482</th>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>439322.0</td>\n",
+       "      <td>8040.015722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>Congo, The Democratic Republic of the</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>25294.0</td>\n",
+       "      <td>6266.452572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>Côte d'Ivoire</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>39650.0</td>\n",
+       "      <td>4201.838103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>642</th>\n",
+       "      <td>Eritrea</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>52826.0</td>\n",
+       "      <td>5276.632409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>707</th>\n",
+       "      <td>Ethiopia</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>21872.0</td>\n",
+       "      <td>5733.854601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>793</th>\n",
+       "      <td>Iraq</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>52646.0</td>\n",
+       "      <td>3504.952911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1772</th>\n",
+       "      <td>Kosovo</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>28497.0</td>\n",
+       "      <td>1106.580352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>873</th>\n",
+       "      <td>Lebanon</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>15721.0</td>\n",
+       "      <td>3178.687652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1009</th>\n",
+       "      <td>Liberia</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>1544.0</td>\n",
+       "      <td>4488.389237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>Libya</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>7288.0</td>\n",
+       "      <td>1775.533107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1244</th>\n",
+       "      <td>Mozambique</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>7107.044344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1150</th>\n",
+       "      <td>Myanmar</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>930.0</td>\n",
+       "      <td>8097.416659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1390</th>\n",
+       "      <td>Sierra Leone</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>3458.0</td>\n",
+       "      <td>4407.133209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1482</th>\n",
+       "      <td>Somalia</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>32551.0</td>\n",
+       "      <td>6529.316611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1529</th>\n",
+       "      <td>South Sudan</td>\n",
+       "      <td>Norway</td>\n",
+       "      <td>425.0</td>\n",
+       "      <td>6004.901735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>921</th>\n",
+       "      <td>Sri Lanka</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>51107.0</td>\n",
+       "      <td>7628.194384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1345</th>\n",
+       "      <td>Sudan</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>12340.0</td>\n",
+       "      <td>5331.470293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1610</th>\n",
+       "      <td>Syrian Arab Republic</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>270812.0</td>\n",
+       "      <td>3176.818517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1729</th>\n",
+       "      <td>Ukraine</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>101160.0</td>\n",
+       "      <td>1626.414541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1863</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>3636.0</td>\n",
+       "      <td>5506.369092</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                origin_name destination_name  Total_6_years  \\\n",
+       "1                               Afghanistan          Austria        67306.0   \n",
+       "82                                   Angola          Belgium         3020.0   \n",
+       "213                  Bosnia and Herzegovina         Slovenia        91670.0   \n",
+       "227                                 Burundi          Belgium         5982.0   \n",
+       "1656                                   Chad            Italy          537.0   \n",
+       "482                                Colombia            Spain       439322.0   \n",
+       "297   Congo, The Democratic Republic of the          Belgium        25294.0   \n",
+       "400                           Côte d'Ivoire            Italy        39650.0   \n",
+       "642                                 Eritrea           Sweden        52826.0   \n",
+       "707                                Ethiopia      Netherlands        21872.0   \n",
+       "793                                    Iraq           Sweden        52646.0   \n",
+       "1772                                 Kosovo      Switzerland        28497.0   \n",
+       "873                                 Lebanon           Sweden        15721.0   \n",
+       "1009                                Liberia            Italy         1544.0   \n",
+       "1100                                  Libya            Italy         7288.0   \n",
+       "1244                             Mozambique            Italy          750.0   \n",
+       "1150                                Myanmar      Switzerland          930.0   \n",
+       "1390                           Sierra Leone            Italy         3458.0   \n",
+       "1482                                Somalia           Sweden        32551.0   \n",
+       "1529                            South Sudan           Norway          425.0   \n",
+       "921                               Sri Lanka            Italy        51107.0   \n",
+       "1345                                  Sudan           Sweden        12340.0   \n",
+       "1610                   Syrian Arab Republic           Sweden       270812.0   \n",
+       "1729                                Ukraine            Italy       101160.0   \n",
+       "1863                                  Yemen           Sweden         3636.0   \n",
+       "\n",
+       "      geodesic_distance_km  \n",
+       "1              4636.538275  \n",
+       "82             6958.978978  \n",
+       "213             326.198961  \n",
+       "227            6446.514154  \n",
+       "1656           2987.462572  \n",
+       "482            8040.015722  \n",
+       "297            6266.452572  \n",
+       "400            4201.838103  \n",
+       "642            5276.632409  \n",
+       "707            5733.854601  \n",
+       "793            3504.952911  \n",
+       "1772           1106.580352  \n",
+       "873            3178.687652  \n",
+       "1009           4488.389237  \n",
+       "1100           1775.533107  \n",
+       "1244           7107.044344  \n",
+       "1150           8097.416659  \n",
+       "1390           4407.133209  \n",
+       "1482           6529.316611  \n",
+       "1529           6004.901735  \n",
+       "921            7628.194384  \n",
+       "1345           5331.470293  \n",
+       "1610           3176.818517  \n",
+       "1729           1626.414541  \n",
+       "1863           5506.369092  "
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "GDP['Total_6_years'] = GDP['Estst_Total_migrant_2014']+ GDP['Estst_Total_migrant_2015']+GDP['Estst_Total_migrant_2016']+GDP['Estst_Total_migrant_2017']+GDP['Estst_Total_migrant_2018']+GDP['Estst_Total_migrant_2019']\n",
+    "idx = GDP.groupby('origin_name')['Total_6_years'].idxmax() #getting rows for each country where the number of emmigrants where maximum\n",
+    "favourite_destination= pd.DataFrame(GDP.loc[idx])\n",
+    "favourite_destination[['origin_name','destination_name', 'Total_6_years','geodesic_distance_km']]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
