--- a/Data_Analysis/first_iteration/First_Analysis.ipynb
+++ b/Data_Analysis/first_iteration/First_Analysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samue\\AppData\\Local\\Temp\\ipykernel_14020\\2711204123.py:11: DtypeWarning:\n",
+      "/tmp/ipykernel_11588/2711204123.py:11: DtypeWarning:\n",
       "\n",
       "Columns (147,149,150,151,153,155,156,157) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "\n"
@@ -39,62 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#this function will be used to get the total number of people migrated from a country in the given year, if you dont provide the destination country\n",
-    "#then you will get the total number of people migrated from the origin country regarless of the destination country\n",
-    "\n",
-    "def col_sum( source, year,gender,age, type, origin_country=None, destination_country = None):\n",
-    "    \"\"\"\n",
-    "        source : String \n",
-    "               for dataset from EUROSTAT 'ESTAT'\n",
-    "               for dataset from UN 'UN'\n",
-    "        \n",
-    "        year :String \n",
-    "                year for the data\n",
-    "        gender : String \n",
-    "                'T' for both, \n",
-    "                'M' for Male, \n",
-    "                'F' for Female\n",
-    "        age : String \n",
-    "                'T' for all ages, \n",
-    "                for below 15 '<15', \n",
-    "                between 15- 64 '15-64',\n",
-    "                above 64 '>64',\n",
-    "        type : String \n",
-    "               for citizen type migration 'cit',\n",
-    "               for residence type migration 'res'\n",
-    "        origin_country : String \n",
-    "                name of the origin country\n",
-    "        origin_country: String  \n",
-    "                name of the origin country\n",
-    "        destination_country : \n",
-    "                String name of the destination country\n",
-    "        \n",
-    "    \n",
-    "    \"\"\"\n",
-    "    if origin_country and destination_country:\n",
-    "        \n",
-    "        value = countries_of_interest_df[(countries_of_interest_df['origin_name']==origin_country) & (countries_of_interest_df['destination_name']==destination_country)][f'{source}_{year}_{gender}_{age}_{type}'].sum()\n",
-    "\n",
-    "    elif origin_country:\n",
-    "        \n",
-    "        value = countries_of_interest_df[(countries_of_interest_df['origin_name']==origin_country)][f'{source}_{year}_{gender}_{age}_{type}'].sum()\n",
-    "    \n",
-    "    return value\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#this function with the help of col_sum() function will built a bar graph for a country showing the total number of people, \n",
+    "#this function with the help of col_sum() function will build a bar graph for a country showing the total number of people, \n",
     "#total number of male and total number of female migrated from that country in the time span of 5 years from 2014-2019 for ESTAT\n",
     "#and from 2015-2019 for UN dataset\n",
     "def bar_graph_of_country(origin_country, source, type):\n",
@@ -3097,7 +3046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
